--- a/tour.html
+++ b/tour.html
@@ -65,7 +65,7 @@
                 <h3>What are the major tourist attractions in Nigeria? Let’s take a look at the top 30!</h3>
                 
                 <center><img id="smart_thumbnail" class="small" style="border: 0.4em solid var(--maroon); border-radius: 0.5em; transition: 0.6s;" src="https://netstorage-legit.akamaized.net/images/vllkyt5b8nbu0u7fa.jpg" width="100%" alt="Tourist attractions in Nigeria and their locations"
-                    title="Tourist attractions in Nigeria and their locations"></center>
+                    title="Tourist attractions in Nigeria and their locations. Click here to resize me."></center>
                 <p>Nigeria is considered the most popular country in Africa and has become an untouched tourist paradise with a large
                     area of exotic beaches, well-preserved tradition and culture, lush mountains, and enchanting tourist attractions.
                 </p>
